2 files modified, 3 added

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -41,6 +41,11 @@
         >
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="/contactos" title="Contactos"
+          >Contactos</a
+        >
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/clientes" title="Gestionar Clientes"
           >Clientes</a
         >
