--- a/src/app/components/contactos/contactos.component.html
+++ b/src/app/components/contactos/contactos.component.html
@@ -5,33 +5,6 @@
 <!-- Formulario Filtro de busqueda, se ve cuando la accion es Listado(busqueda/listado)-->
 <form name="FormBusqueda" [formGroup]="FormBusqueda" *ngIf="AccionABMC == 'L'">
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-4 col-md-2">
-        <label class="col-form-label">Nombre:</label>
-      </div>
-      <div class="col-sm-8 col-md-4">
-        <input
-          type="text"
-          name="Nombre"
-          class="form-control"
-          formControlName="Nombre"
-          maxlength="55"
-        />
-      </div>
-      <div class="col-sm-4 col-md-2">
-        <label class="col-form-label">Activo:</label>
-      </div>
-      <div class="col-sm-8 col-md-4">
-        <select class="form-control" name="Activo" formControlName="Activo">
-          <option *ngFor="let opt of OpcionesActivo" [ngValue]="opt.Id">
-            ‌{{ opt.Nombre }}
-          </option>
-        </select>
-      </div>
-    </div>
-
-    <hr />
-
     <!-- Botones -->
     <div class="row justify-content-center botones">
       <button
@@ -54,25 +27,25 @@
   <table class="table table-hover table-sm table-bordered table-striped">
     <thead>
       <tr>
+        <th class="text-center">Id Contacto</th>
         <th class="text-center">Nombre</th>
-        <th class="text-center">Precio</th>
-        <th class="text-center">Stock</th>
-        <th class="text-center">Familia</th>
-        <th class="text-center">Fecha de Alta</th>
-        <th class="text-center">Activo</th>
+        <th class="text-center">Fecha Nacimiento</th>
+        <th class="text-center">Telefono</th>
         <th class="text-center text-nowrap">Acciones</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let Item of Items">
-        <td>{{ Item.Nombre | uppercase }}</td>
-        <td class="text-right">{{ Item.Precio | currency: '$' }}</td>
-        <td class="text-right">{{ Item.Stock }}</td>
+        <td>{{ Item.IdContacto }}</td>
+
+        <td class="text-right">{{ Item.Nombre }}</td>
+
         <td class="text-right">
-          {{ GetArticuloFamiliaNombre(Item.IdArticuloFamilia) }}
+          {{ Item.FechaNacimiento | date: 'dd/MM/yyyy' }}
         </td>
-        <td class="text-right">{{ Item.FechaAlta | date: 'dd/MM/yyyy' }}</td>
-        <td>{{ Item.Activo ? 'SI' : 'NO' }}</td>
+
+        <td class="text-right">{{ Item.Telefono }}</td>
+
         <td class="text-center text-nowrap">
           <button
             class="btn btn-sm btn-outline-primary"
@@ -81,51 +54,10 @@
           >
             <i class="fa fa-eye"></i>
           </button>
-          <button
-            class="btn btn-sm btn-outline-primary"
-            title="Modificar"
-            (click)="Modificar(Item)"
-          >
-            <i class="fa fa-pencil"></i>
-          </button>
-          <button
-            class="btn btn-sm"
-            [ngClass]="{
-              'btn-outline-danger': Item.Activo,
-              'btn-outline-success': !Item.Activo
-            }"
-            title="{{ Item.Activo ? 'Desactivar' : 'Activar' }}"
-            (click)="ActivarDesactivar(Item)"
-          >
-            <i class="fa fa-{{ Item.Activo ? 'times' : 'check' }}"></i>
-          </button>
         </td>
       </tr>
     </tbody>
   </table>
-
-  <!-- Paginador-->
-  <div class="paginador">
-    <div class="row">
-      <div class="col">
-        <span class="pyBadge">Registros: {{ RegistrosTotal }}</span>
-      </div>
-      <div class="col text-center">
-        <ngb-pagination
-          [(page)]="Pagina"
-          (pageChange)="Buscar()"
-          [pageSize]="10"
-          [maxSize]="10"
-          [collectionSize]="RegistrosTotal"
-        ></ngb-pagination>
-      </div>
-      <div class="col text-right">
-        <button class="btn btn-primary" (click)="ImprimirListado()">
-          <i class="fa fa-print"></i> Imprimir
-        </button>
-      </div>
-    </div>
-  </div>
 </div>
 
 <!--No se encontraron registros-->
@@ -182,192 +114,31 @@
         </div>
       </div>
 
-      <!--campo precio-->
-      <div class="row">
-        <div class="col-sm-4 col-md-3 offset-md-1">
-          <label class="col-form-label" for="Precio"
-            >Precio<span class="text-danger">*</span>:</label
-          >
-        </div>
-        <div class="col-sm-8 col-md-6">
-          <input
-            type="text"
-            name="Precio"
-            class="form-control"
-            formControlName="Precio"
-            [ngClass]="{
-              'is-invalid':
-                (FormRegistro.controls['Precio'].touched || submitted) &&
-                FormRegistro.controls['Precio'].errors
-            }"
-          />
-          <div
-            class="validacion"
-            *ngIf="
-              (FormRegistro.controls['Precio'].touched || submitted) &&
-              FormRegistro.controls['Precio'].hasError('required')
-            "
-          >
-            Dato requerido.
-          </div>
-          <div
-            class="validacion"
-            *ngIf="
-              (FormRegistro.controls['Precio'].touched || submitted) &&
-              FormRegistro.controls['Precio'].hasError('pattern')
-            "
-          >
-            Dato numérico, 1 a 7 dígitos.
-          </div>
-        </div>
-      </div>
-
-      <!--campo stock-->
-      <div class="row">
-        <div class="col-sm-4 col-md-3 offset-md-1">
-          <label class="col-form-label" for="Stock">
-            Stock<span class="text-danger">*</span>:
-          </label>
-        </div>
-        <div class="col-sm-8 col-md-6">
-          <input
-            type="text"
-            name="Stock"
-            class="form-control"
-            formControlName="Stock"
-            [ngClass]="{
-              'is-invalid':
-                (FormRegistro.controls['Stock'].touched || submitted) &&
-                FormRegistro.controls['Stock'].errors
-            }"
-          />
-          <div
-            class="validacion"
-            *ngIf="
-              (FormRegistro.controls['Stock'].touched || submitted) &&
-              FormRegistro.controls['Stock'].hasError('required')
-            "
-          >
-            Dato requerido.
-          </div>
-          <div
-            class="validacion"
-            *ngIf="
-              (FormRegistro.controls['Stock'].touched || submitted) &&
-              FormRegistro.controls['Stock'].hasError('pattern')
-            "
-          >
-            Dato numérico, 1 a 7 dígitos.
-          </div>
-        </div>
-      </div>
-
-      <!--campo codigodebarra-->
-      <div class="row">
-        <div class="col-sm-4 col-md-3 offset-md-1">
-          <label class="col-form-label" for="Stock">
-            Codigo De Barra<span class="text-danger">*</span>:
-          </label>
-        </div>
-        <div class="col-sm-8 col-md-6">
-          <input
-            type="text"
-            name="CodigoDeBarra"
-            class="form-control"
-            formControlName="CodigoDeBarra"
-            [ngClass]="{
-              'is-invalid':
-                (FormRegistro.controls['CodigoDeBarra'].touched || submitted) &&
-                FormRegistro.controls['CodigoDeBarra'].errors
-            }"
-          />
-          <div
-            class="validacion"
-            *ngIf="
-              (FormRegistro.controls['CodigoDeBarra'].touched || submitted) &&
-              FormRegistro.controls['CodigoDeBarra'].hasError('required')
-            "
-          >
-            Dato requerido.
-          </div>
-          <div
-            class="validacion"
-            *ngIf="
-              (FormRegistro.controls['CodigoDeBarra'].touched || submitted) &&
-              FormRegistro.controls['CodigoDeBarra'].hasError('pattern')
-            "
-          >
-            Dato numérico, 13 dígitos.
-          </div>
-        </div>
-      </div>
-
-      <!--campo idarticulofamilia-->
-      <div class="row">
-        <div class="col-sm-4 col-md-3 offset-md-1">
-          <label class="col-form-label" for="IdArticuloFamilia">
-            Familia<span class="text-danger">*</span>:
-          </label>
-        </div>
-        <div class="col-sm-8 col-md-6">
-          <select
-            name="IdArticuloFamilia"
-            class="form-control"
-            formControlName="IdArticuloFamilia"
-            [ngClass]="{
-              'is-invalid':
-                (FormRegistro.controls['IdArticuloFamilia'].touched ||
-                  submitted) &&
-                FormRegistro.controls['IdArticuloFamilia'].errors
-            }"
-          >
-            <option
-              *ngFor="let opt of Familias"
-              [ngValue]="opt.IdArticuloFamilia"
-            >
-              ‌{{ opt.Nombre }}
-            </option>
-
-            <option></option>
-          </select>
-
-          <div
-            class="validacion"
-            *ngIf="
-              (FormRegistro.controls['IdArticuloFamilia'].touched ||
-                submitted) &&
-              FormRegistro.controls['IdArticuloFamilia'].hasError('required')
-            "
-          >
-            Dato requerido.
-          </div>
-        </div>
-      </div>
-
-      <!--campo fechaalta-->
+      <!--campo FechaNacimiento-->
       <div class="row">
         <div class="col-sm-4 col-md-3 offset-md-1">
           <label class="col-form-label"
-            >Fecha de alta<span class="text-danger">*</span>:
+            >Fecha de Nacimiento<span class="text-danger">*</span>:
           </label>
         </div>
         <div class="col-sm-8 col-md-6">
           <input
             class="form-control"
-            formControlName="FechaAlta"
-            name="FechaAlta"
+            formControlName="FechaNacimiento"
+            name="FechaNacimiento"
             [ngClass]="{
               'is-invalid':
-                (FormRegistro.controls['FechaAlta'].touched || submitted) &&
-                FormRegistro.controls['FechaAlta'].errors
+                (FormRegistro.controls['FechaNacimiento'].touched ||
+                  submitted) &&
+                FormRegistro.controls['FechaNacimiento'].errors
             }"
           />
 
           <div
             class="validacion"
             *ngIf="
-              (FormRegistro.controls['FechaAlta'].touched || submitted) &&
-              FormRegistro.controls['FechaAlta'].hasError('required')
+              (FormRegistro.controls['FechaNacimiento'].touched || submitted) &&
+              FormRegistro.controls['FechaNacimiento'].hasError('required')
             "
           >
             Dato requerido.
@@ -375,8 +146,8 @@
           <div
             class="validacion"
             *ngIf="
-              (FormRegistro.controls['FechaAlta'].touched || submitted) &&
-              FormRegistro.controls['FechaAlta'].hasError('pattern')
+              (FormRegistro.controls['FechaNacimiento'].touched || submitted) &&
+              FormRegistro.controls['FechaNacimiento'].hasError('pattern')
             "
           >
             Dato fecha, formato dd/mm/aaaa.
@@ -384,23 +155,43 @@
         </div>
       </div>
 
-      <!--campo activo-->
+      <!--campo Telefono-->
       <div class="row">
         <div class="col-sm-4 col-md-3 offset-md-1">
-          <label class="col-form-label" for="Activo">Activo:</label>
+          <label class="col-form-label" for="Stock">
+            Telefono<span class="text-danger">*</span>:
+          </label>
         </div>
         <div class="col-sm-8 col-md-6">
-          <!-- ref?? disabled html no fucniona en reactive forms? -->
-          <select
+          <input
+            type="text"
+            name="Telefono"
             class="form-control"
-            name="Activo"
-            formControlName="Activo"
-            [disabled]="true"
+            formControlName="Telefono"
+            [ngClass]="{
+              'is-invalid':
+                (FormRegistro.controls['Telefono'].touched || submitted) &&
+                FormRegistro.controls['Telefono'].errors
+            }"
+          />
+          <div
+            class="validacion"
+            *ngIf="
+              (FormRegistro.controls['Telefono'].touched || submitted) &&
+              FormRegistro.controls['Telefono'].hasError('required')
+            "
           >
-            <option *ngFor="let opt of OpcionesActivo" [ngValue]="opt.Id">
-              ‌{{ opt.Nombre }}
-            </option>
-          </select>
+            Dato requerido.
+          </div>
+          <div
+            class="validacion"
+            *ngIf="
+              (FormRegistro.controls['Telefono'].touched || submitted) &&
+              FormRegistro.controls['Telefono'].hasError('pattern')
+            "
+          >
+            Dato numérico, 13 dígitos.
+          </div>
         </div>
       </div>
     </fieldset>
