--- a/src/app/components/contactos/contactos.component.html
+++ b/src/app/components/contactos/contactos.component.html
@@ -7,7 +7,11 @@
   <div class="container-fluid">
     <!-- Botones -->
     <div class="row justify-content-center botones">
-      <button type="button" class="btn btn-primary" (click)="Buscar()">
+      <button
+        type="button"
+        class="btn btn-primary"
+        (click)="Pagina = 1; Buscar()"
+      >
         <i class="fa fa-search"> </i> Buscar
       </button>
       <button type="button" class="btn btn-primary" (click)="Agregar()">
@@ -54,6 +58,15 @@
       </tr>
     </tbody>
   </table>
+</div>
+
+<!--No se encontraron registros-->
+<div
+  class="alert alert-info mensajesAlert"
+  *ngIf="AccionABMC == 'L' && Items?.length == 0"
+>
+  <i class="fa fa-exclamation-sign"></i>{{ Mensajes['SD'] }}
+  <!-- texto: No se encontraron registros -->
 </div>
 
 <!-- Registro en Alta,Modificacion y Consulta -->
@@ -199,6 +212,14 @@
         <i class="fa fa-undo"></i>
         {{ AccionABMC == 'C' ? 'Volver' : 'Cancelar' }}
       </button>
+    </div>
+
+    <!--texto: Revisar los datos ingresados...-->
+    <div
+      *ngIf="submitted && FormRegistro.invalid"
+      class="row alert alert-danger mensajesAlert"
+    >
+      <i class="fa fa-exclamation-sign"></i>{{ Mensajes['RD'] }}
     </div>
   </div>
 </form>
